# KnowledgeBase

./: .gitignore  README.md
Core/: README.md
Courses/: README.md
Courses/CrackingTheCodingInterview/: README.md
Courses/FlutterAndDartCompleteGuide/: README.md
Courses/PythonForMachineLearningDataScienceMasterclass/: README.md
Courses/TheCompleteAgenticAIEngineeringCourse/: README.md
Docs/: Curls.md  Dotnet_StartUp_New_Dotnet_Proj.md  Infrastructure_ApachePulsar_Vs_SQS.md  README.md  SSH.md  Start_Up_New_Dotnet_Proj.md
Docs/Scalability/: AMQP.md  How_Does_SQS_Compare_To_These_AMQP_Technologies.md  What_Is_MassTransit_Anyway.md  What_The_Heck_Is_Redis.md  Why_Not_Use_Redis_Instead_Of_ActiveMQ.md
Projects/: README.md  _ReadmeTemplate.md
Projects/AISoftwareDevTeam/: README.md  main.py  pyproject.toml  requirements.txt
Projects/ActiveMQ/: ActiveMQ.sln  README.md
Projects/AiReasoningLoop/: README.md  app.py  loop.py  pyproject.toml
Projects/FrontEndSyncEngine/: README.md
Projects/IntegrationTests/: IntegrationTests.sln  README.md
Projects/JavaMaven/: README.md
Projects/Kafka/: Kafka.sln  README.md  docker-compose.yml
Projects/LocalStackS3/: LocalStackS3.csproj  Program.cs  README.md  appsettings.json
Projects/LocalStackSQS/: LocalStackSQS.sln  README.md  docker-compose.yml
Projects/MicroFrontends/: README.md  package.json  vite.config.ts
Projects/VocabBot/: README.md.md  app.py  deploy_to_hf.sh  pyproject.toml
Projects/VocabBot/lib/: vocab_agent.py
Projects/VocabBot/vocabbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+615 files in other folders)
